--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 <meta name="description" content="超级星小汤的个人博客,tanglx,tanglx02">
 <meta name="author" content="
 作者:&nbsp;Sulv">
-<link rel="canonical" href="/">
+<link rel="canonical" href="https://tanglx02.github.io/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.aa70a0c9a250ca0c244d45bd11cc86f4dd82a1bc61a196c5285e14b70b1f8b36.css" integrity="sha256-qnCgyaJQygwkTUW9EcyG9N2CobxhoZbFKF4UtwsfizY=" rel="preload stylesheet" as="style">
-<link rel="icon" href="/img/avatar.jpg">
-<link rel="icon" type="image/png" sizes="16x16" href="/img/avatar.jpg">
-<link rel="icon" type="image/png" sizes="32x32" href="/img/avatar.jpg">
-<link rel="apple-touch-icon" href="/img/avatar.jpg">
-<link rel="mask-icon" href="/img/avatar.jpg">
+<link rel="icon" href="https://tanglx02.github.io/img/avatar.jpg">
+<link rel="icon" type="image/png" sizes="16x16" href="https://tanglx02.github.io/img/avatar.jpg">
+<link rel="icon" type="image/png" sizes="32x32" href="https://tanglx02.github.io/img/avatar.jpg">
+<link rel="apple-touch-icon" href="https://tanglx02.github.io/img/avatar.jpg">
+<link rel="mask-icon" href="https://tanglx02.github.io/img/avatar.jpg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" type="application/rss+xml" href="/index.xml">
-<link rel="alternate" type="application/json" href="/index.json">
+<link rel="alternate" type="application/rss+xml" href="https://tanglx02.github.io/index.xml">
+<link rel="alternate" type="application/json" href="https://tanglx02.github.io/index.json">
 <noscript>
     <style>
         #theme-toggle,
@@ -71,7 +71,7 @@ var _hmt = _hmt || [];
 <meta property="og:title" content="超级星小汤-tanglx" />
 <meta property="og:description" content="超级星小汤的个人博客,tanglx,tanglx02" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="/" />
+<meta property="og:url" content="https://tanglx02.github.io/" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="超级星小汤-tanglx"/>
@@ -82,9 +82,9 @@ var _hmt = _hmt || [];
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "超级星小汤-tanglx",
-  "url": "/",
+  "url": "https://tanglx02.github.io",
   "description": "超级星小汤的个人博客,tanglx,tanglx02",
-  "thumbnailUrl": "/img/avatar.jpg",
+  "thumbnailUrl": "https://tanglx02.github.io/img/avatar.jpg",
   "sameAs": [
       "https://space.bilibili.com/414005751", "img/qq.png", "img/wechat.png", "img/twitter.png", "https://github.com/tanglx02", "mailto:54312795@qq.com", "index.xml"
   ]
@@ -109,8 +109,8 @@ var _hmt = _hmt || [];
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="/" accesskey="h" title="超级星小汤 (Alt + H)">
-            <img src="/img/avatar.jpg" alt="logo" aria-label="logo"
+            <a href="https://tanglx02.github.io" accesskey="h" title="超级星小汤 (Alt + H)">
+            <img src="https://tanglx02.github.io/img/avatar.jpg" alt="logo" aria-label="logo"
                  height="35">超级星小汤</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
@@ -137,37 +137,37 @@ var _hmt = _hmt || [];
         </div>
         <ul id="menu">
             <li>
-                <a href="/search" title="🔍 搜索 (Alt &#43; /)" accesskey=/>
+                <a href="https://tanglx02.github.io/search" title="🔍 搜索 (Alt &#43; /)" accesskey=/>
                 <span>🔍 搜索</span>
                 </a>
             </li>
             <li>
-                <a href="/" title="🏠 主页">
+                <a href="https://tanglx02.github.io/" title="🏠 主页">
                 <span class="active">🏠 主页</span>
                 </a>
             </li>
             <li>
-                <a href="/posts" title="📚 文章">
+                <a href="https://tanglx02.github.io/posts" title="📚 文章">
                 <span>📚 文章</span>
                 </a>
             </li>
             <li>
-                <a href="/tags" title="🧩 标签">
+                <a href="https://tanglx02.github.io/tags" title="🧩 标签">
                 <span>🧩 标签</span>
                 </a>
             </li>
             <li>
-                <a href="/archives/" title="⏱ 时间轴">
+                <a href="https://tanglx02.github.io/archives/" title="⏱ 时间轴">
                 <span>⏱ 时间轴</span>
                 </a>
             </li>
             <li>
-                <a href="/about" title="🙋🏻‍♂️ 关于">
+                <a href="https://tanglx02.github.io/about" title="🙋🏻‍♂️ 关于">
                 <span>🙋🏻‍♂️ 关于</span>
                 </a>
             </li>
             <li>
-                <a href="/links" title="🤝 友链">
+                <a href="https://tanglx02.github.io/links" title="🤝 友链">
                 <span>🤝 友链</span>
                 </a>
             </li>
@@ -175,7 +175,7 @@ var _hmt = _hmt || [];
     </nav>
 </header>
 <main class="main"><div class="profile">
-    <div class="profile_inner"><img src="/img/avatar.jpg" alt="profile image"
+    <div class="profile_inner"><img src="https://tanglx02.github.io/img/avatar.jpg" alt="profile image"
         height="150" width="150" />
         <h1>(〃&lsquo;▽&rsquo;〃)</h1>
         <span></span><div class="social-icons">
@@ -246,7 +246,7 @@ var _hmt = _hmt || [];
         Copyright
         &copy;
         2020-2022 
-        <a href="/" style="color:#939393;">超级星小汤-tanglx</a>
+        <a href="https://tanglx02.github.io" style="color:#939393;">超级星小汤-tanglx</a>
          All Rights Reserved
     </span>
 
